# lance-graph-project

./: .gitignore  README.md  SKILL.md  hatch_build.py  progress.txt  pyproject.toml  ralph.ps1  schema.yaml  skills-lock.json
.github/: copilot-instructions.md
.orchestrate_data/: edges.json  nodes.json
docs/: claude_desktop_config.example.json  gap_analysis_report.md  prd_orchestration_db.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: analysis.ts  client.ts  edges.ts  nodes.ts  search.ts  settings.ts  views.ts
frontend/src/hooks/: useEdges.ts  useKeyboardShortcuts.ts  useNodes.ts  useSearch.ts  useSelection.ts
frontend/src/lib/: graphUtils.ts
frontend/src/stores/: selection.ts  ui.ts
frontend/src/types/: analysis.ts  api.ts  edges.ts  nodes.ts  settings.ts
prompts/: default.txt
scripts/: generate_seed_data.py
scripts/ralph/: prd.json
src/lance_graph_project/: __init__.py  cli.py  embeddings.py  graph_config.py  mcp_server.py  schema_registry.py
src/lance_graph_project/api/: app.py  schemas.py
src/lance_graph_project/models/: __init__.py  edges.py  nodes.py
src/lance_graph_project/services/: __init__.py  analysis_service.py  container.py  edge_service.py  import_export_service.py  lance_adapter.py  node_service.py  query_service.py  repository.py  schema_service.py  search_service.py  (+1 more)
tests/: test_api_crud.py  test_api_system.py  test_api_workflow_e2e.py  test_cli.py  test_graph_config.py  test_prd_gap_analysis.py
(+47 files in other folders)
